syntax = "proto3";

package binacs_api_user_v1;

import "google/api/annotations.proto";

message UserTestReq {
}
message UserTestResp {
    int64 code = 1;
    string msg = 2;
}

service User {
    rpc UserTest(UserTestReq) returns (UserTestResp) {
        option (google.api.http) = {
            post: "/api/v1/User/test"
            body: "*"
        };
    };

    rpc UserRegister(UserRegisterReq) returns (UserRegisterResp) {
        option (google.api.http) = {
            post: "/api/v1/User/register"
            body: "*"
        };
    };

    rpc UserAuth(UserAuthReq) returns (UserAuthResp) {
        option (google.api.http) = {
            post: "/api/v1/User/auth"
            body: "*"
        };
    };
    
    rpc UserRefresh(UserRefreshReq) returns (UserRefreshResp) {
        option (google.api.http) = {
            post: "/api/v1/User/refresh"
            body: "*"
        };
    };

    rpc UserInfo(UserInfoReq) returns (UserInfoResp) {
        option (google.api.http) = {
            post: "/api/v1/User/info"
            body: "*"
        };
    };
}

// UserRegister
message UserRegisterDataObj {
    string id = 1;
    string pwd = 2;
}

message UserRegisterReq {
    string id = 1;
    string pwd = 2;
}

message UserRegisterResp {
    int64 code = 1;
    string msg = 2;
    UserRegisterDataObj data = 3;
}

// UserAuth
message UserTokenObj {
    string access_token = 1;
    int64 expire_time = 2;
    string refresh_token = 3;
}

message UserAuthReq {
    string id = 1;
    string pwd = 2;
}

message UserAuthResp {
    int64 code = 1;
    string msg = 2;
    UserTokenObj data = 3;
}

// UserRefresh
message UserRefreshReq {
    string refresh_token = 1;
}

message UserRefreshResp {
    int64 code = 1;
    string msg = 2;
    UserTokenObj data = 3;
}

// UserInfo
message UserInfoObj {
    string id = 1;
    string role = 2;
    string desc = 3;
    string ctime = 4;
    repeated string more = 5;
}

message UserInfoReq {
    string access_token = 1;
}

message UserInfoResp {
    int64 code = 1;
    string msg = 2;
    UserInfoObj data = 3;
}
